@@ -51,6 +51,9 @@
 [zhongyuan_security_1.0.0.1 2014-07-07 张春生]
 1.新功能：更改首页样式
 
+[zhongyuan_security_1.0.0.1 2014-07-19 张春生]
+1.新功能:更新sql语句
+
 --备注分类
 1、新功能：
 2、Bug:
